fix spacing on options page

--- a/ui/options/options.css
+++ b/ui/options/options.css
@@ -31,12 +31,12 @@ body {
   font-size: 16px;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+  margin-top: 70px;
   width: 100%;
   display: flex;
   flex-direction: column;
